--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content=""
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Calculadora</title>
+        <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
     </head>
+    <body>
+        <div class="container">
+            <div class="calculadora"></div>
+            <div class="display"></div>
+        </div>
+    </body>
 </html>
