--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculadora</title>
-        <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container">
-            <div class="calculadora"></div>
-            <div class="display"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculadora</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="calculadora">
+      <div class="display"></div>
+        <div id="valor-anterior"></div>
+        <div id="valor-actual"></div>
+         </div>
+         <button>C</button>
+         <button>&larr;</button>
+         <button>%</button>
+         <button>7</button>
+         <button>8</button>
+         <button>9</button>
+         <button>4</button>
+         <button>5</button>
+         <button>6</button>
+         <button>1</button>
+         <button>2</button>
+         <button>3</button>
+         <button></button>
+         <button></button>
+         <button></button>
+         <button></button>
+         <button></button>
+         <button></button>
         </div>
-    </body>
+    </div>
+  </body>
 </html>
