--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap"
       rel="stylesheet"
     />
+    <link href="index.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="container">
