--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap"rel="stylesheet"/>
     <link href="index.css" rel="stylesheet"/>
+    <script src="Calculadora.js" type ="text/javascript"></script>
+    <script src="index.js" type ="text/javascript" defer></script>
   </head>
   <body>
     <div class="container">
-      <div class="calculadora">
-      <div class="display"></div>
-        <div id="valor-anterior"></div>
-        <div id="valor-actual"></div>
+        <div class="calculadora">
+            <div class="display"></div>
+                <div id="valor-anterior"></div>
+                    <div id="valor-actual"></div>
          </div>
          <button class="col-2">C</button>
          <button>&larr;</button>
