cambios no sirven botones

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="calculadora">
             <div class="display">
-                <div id="valor-anterior"></div>
-                <div id="valor-actual"></div>
+                <div id="valor-anterior">4444</div>
+                <div id="valor-actual">6767</div>
             </div>
             <button class="col-2" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
