--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <title>Calculadora</title>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
     <link href="index.css" rel="stylesheet" />
-    <script src="Display.js" type="text/javascript"></script>
-    <script src="Calculadora.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="calculadora">
             <div class="display">
-                <div id="valor-anterior">4444</div>
-                <div id="valor-actual">6767</div>
+                <div id="valor-anterior"></div>
+                <div id="valor-actual"></div>
             </div>
             <button class="col-2" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
@@ -37,5 +34,9 @@
             <button class="operador" value="igual">=</button>
         </div>
     </div>
+    
+    <script src="Display.js" type="text/javascript"></script>
+    <script src="Calculadora.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
