--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="calculadora">
             <div class="display">
                 <div id="valor-anterior"></div>
+                <div id="valor-operacion"></div>
                 <div id="valor-actual"></div>
             </div>
             <button class="col-2" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
-            <button class="operador" value="dividir">%</button>
+            <button class="operador" value="dividir">/</button>
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
