--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
             <button class="operador" value="igual">=</button>
         </div>
     </div>
-    
+
+    <div class="historialContainer"> 
+      <div class="historial">
+        <div class="cuerpo">
+            <div id="historialFinal"></div>
+        </div>
+        <button class="col-2 botonHistorial">Eliminar el historial</button>
+      </div>
+    </div>
+
     <script src="Display.js" type="text/javascript"></script>
     <script src="Calculadora.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
